// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> it matches the snapshot 1`] = `
<input
  className="Input"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  type="text"
  value="hello"
/>
`;

exports[`<Input Input /> it matches the snapshot 1`] = `
<input
  className="Input Input"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  type="text"
  value="hello"
/>
`;
